# rust-shorty-challenge

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20230123154041_init.up.sql
src/: main.rs
src/configuration/: config.rs  mod.rs
src/infrastructure/: http_lib.rs  mod.rs  pagination.rs
src/middleware/: cors.rs  mod.rs
src/modules/: mod.rs
src/modules/common/: mod.rs  model.rs  schema.rs
src/modules/tiny_url/: handler.rs  mod.rs  route.rs  service.rs
src/routes/: routes.rs
