[package]
name = "rust-shorty-challenge"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-service = "2.0.2"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
validator = { version = "0.16.0", features = ["derive"] }
validator_derive = "0.16"
regex = "1.4"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
futures = "0.3"
rand = "0.8"
lazy_static = "1.4"